--- a/Twitter/Twitter_data_collection_and_analysis.Rmd
+++ b/Twitter/Twitter_data_collection_and_analysis.Rmd
@@ -832,23 +832,7 @@ usa_basemap.df = inner_join(usa_basemap.points, usa_basemap@data, by="id")
 #plot tweets with sentiment as polygons
 colors <- brewer.pal(7, "RdBu")
 colors[4] <- "gray85"
-#mean sentiment
-map_meanstatesentiment <- ggplot(usa_basemap.df) +  
-  aes(long, lat, group = group, fill = groups) + 
-  geom_polygon() +
-  theme_map() +
-  scale_fill_manual(values=colors) +
-  labs(x = NULL, 
-         y = NULL, 
-         title = "Mean sentiment of spider tweets", 
-         subtitle = "(January 1 2019-December 31 2019)") +
-    annotate("text", x = -95.9, y = 25.3, size = 3, label = "Sentiment scale is from -1 to 1") +
-  coord_sf(crs = st_crs(WGS84_proj), xlim=c(-124.7, -67.1), ylim = c(25.2, 49.4)) +   annotation_north_arrow(style = north_arrow_fancy_orienteering, location = "tr", which_north = "true") +
-  scale_size_continuous(range = c(1, 8), breaks = c(250, 500, 750, 1000)) + 
-  annotation_scale(location = "br", line_width = 0.5) + 
-  theme(plot.title = element_text(hjust = 0.5), plot.subtitle = element_text(hjust = 0.5), legend.title = element_blank(), legend.background=element_blank()) + borders("state", colour = "gray80", fill = NA)
-map_meanstatesentiment
-#change between overall and state means
+#map change between overall and state means
 map_meanchangesentiment <- ggplot(usa_basemap.df) + 
   aes(long, lat, group = group, fill = groups) + 
   geom_polygon() +
